// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /optimize golden output > matches the recorded response for black-litterman 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.11903651078529819,
  "sharpe_ratio": 2.9074581306140646,
  "stats": {
    "ci_95_high": 0.18579983201606254,
    "ci_95_low": 0.05227318955453382,
    "prob_neg_1m": 0.15653382864082555,
    "prob_neg_1y": 0.0002374249448901522,
    "prob_neg_2y": 3.8696458753983975e-7,
    "prob_neg_3m": 0.04029231745854689,
  },
  "strategy": "black-litterman",
  "volatility": 0.03406291899528794,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.5034521116461387,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.20317942325749427,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.29336846509636694,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for black-litterman with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.17913289985822314,
  "sharpe_ratio": 3.10196192787742,
  "stats": {
    "ci_95_high": 0.27968232340822186,
    "ci_95_low": 0.0785834763082244,
    "prob_neg_1m": 0.1567268610470675,
    "prob_neg_1y": 0.00023991565411901616,
    "prob_neg_2y": 3.9486374947550473e-7,
    "prob_neg_3m": 0.04041325694872305,
  },
  "strategy": "black-litterman",
  "volatility": 0.05130072630101977,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.7451226555768982,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.3127183011702357,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.44215904325286604,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for cvar 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.06278386941787484,
  "sharpe_ratio": 1.7006199508378907,
  "stats": {
    "ci_95_high": 0.11209317219167733,
    "ci_95_low": 0.013474566644072344,
    "prob_neg_1m": 0.23563371007559697,
    "prob_neg_1y": 0.006287197569774972,
    "prob_neg_2y": 0.00020836149072062105,
    "prob_neg_3m": 0.10605205928292166,
  },
  "strategy": "cvar",
  "volatility": 0.025157807537654335,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.8737553969710682,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.08959862073601359,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.036645982292572626,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for cvar with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.12268311764523696,
  "sharpe_ratio": 2.552871706561219,
  "stats": {
    "ci_95_high": 0.20151939839816407,
    "ci_95_low": 0.04384683689230984,
    "prob_neg_1m": 0.18929709015843776,
    "prob_neg_1y": 0.0011438770529760833,
    "prob_neg_2y": 0.000008040384761820452,
    "prob_neg_3m": 0.06362304273202518,
  },
  "strategy": "cvar",
  "volatility": 0.04022259222088118,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5424291970384284,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.1575708029619673,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for equal-weight 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.12966232256785193,
  "sharpe_ratio": 2.8297487296240305,
  "stats": {
    "ci_95_high": 0.20561894372747946,
    "ci_95_low": 0.05370570140822439,
    "prob_neg_1m": 0.1670574355341099,
    "prob_neg_1y": 0.0004102346497551479,
    "prob_neg_2y": 0.0000011144515729699656,
    "prob_neg_3m": 0.04717185684702907,
  },
  "strategy": "equal-weight",
  "volatility": 0.03875337814266711,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.3333333333333333,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.3333333333333333,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.3333333333333333,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for equal-weight with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.1944934838517779,
  "sharpe_ratio": 3.001776743339994,
  "stats": {
    "ci_95_high": 0.3084284155912192,
    "ci_95_low": 0.08055855211233658,
    "prob_neg_1m": 0.1670574355341099,
    "prob_neg_1y": 0.0004102346497551479,
    "prob_neg_2y": 0.0000011144515729699656,
    "prob_neg_3m": 0.04717185684702907,
  },
  "strategy": "equal-weight",
  "volatility": 0.05813006721400067,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.5,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.5,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for hrp 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.06939127245036752,
  "sharpe_ratio": 2.044583933466737,
  "stats": {
    "ci_95_high": 0.11673924013129192,
    "ci_95_low": 0.022043304769443127,
    "prob_neg_1m": 0.20349035028635837,
    "prob_neg_1y": 0.002036275449102176,
    "prob_neg_2y": 0.000024305740304653156,
    "prob_neg_3m": 0.07546586961229135,
  },
  "strategy": "hrp",
  "volatility": 0.02415712636781857,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.7437098129745643,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.19685864896682462,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.05943153805861112,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for hrp with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.14012168197282066,
  "sharpe_ratio": 2.9112569439892044,
  "stats": {
    "ci_95_high": 0.22099345014595706,
    "ci_95_low": 0.059249913799684265,
    "prob_neg_1m": 0.16346075961476214,
    "prob_neg_1y": 0.0003419749827170415,
    "prob_neg_2y": 7.839745734816717e-7,
    "prob_neg_3m": 0.04475503530626862,
  },
  "strategy": "hrp",
  "volatility": 0.041261106210783875,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.4530703331812458,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.24692966681892553,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for knee-point 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.20085620627989378,
  "sharpe_ratio": 2.6272448587097523,
  "stats": {
    "ci_95_high": 0.3357801221583236,
    "ci_95_low": 0.06593229040146398,
    "prob_neg_1m": 0.19981270836390824,
    "prob_neg_1y": 0.0017627383436500943,
    "prob_neg_2y": 0.00001843769104337145,
    "prob_neg_3m": 0.07229780477582826,
  },
  "strategy": "knee-point",
  "volatility": 0.06883873259103562,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.0011766888983589506,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.32895760370770455,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.6698657073931937,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for knee-point with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.18462698081447265,
  "sharpe_ratio": 2.9529987297722404,
  "stats": {
    "ci_95_high": 0.2938951898195111,
    "ci_95_low": 0.07535877180943415,
    "prob_neg_1m": 0.16953116131866552,
    "prob_neg_1y": 0.00046363109657548973,
    "prob_neg_2y": 0.000001411552481178635,
    "prob_neg_3m": 0.04887360097829424,
  },
  "strategy": "knee-point",
  "volatility": 0.055749086227060464,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.4788212693107388,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5735399338485987,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.4476387968405621,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-diversification 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.09211720898331191,
  "sharpe_ratio": 2.6693716183721294,
  "stats": {
    "ci_95_high": 0.14506964491783758,
    "ci_95_low": 0.039164773048786225,
    "prob_neg_1m": 0.16248803420871427,
    "prob_neg_1y": 0.0003252720869553194,
    "prob_neg_2y": 7.116208072810437e-7,
    "prob_neg_3m": 0.04411310100893662,
  },
  "strategy": "max-diversification",
  "volatility": 0.027016548946186575,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.5559531827753619,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.2841485299644557,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.1598982872605316,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-diversification with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.1405615950946045,
  "sharpe_ratio": 2.917808975518366,
  "stats": {
    "ci_95_high": 0.22154726906027067,
    "ci_95_low": 0.059575921128938336,
    "prob_neg_1m": 0.16304300004092975,
    "prob_neg_1y": 0.0003347141315447888,
    "prob_neg_2y": 7.521083081885038e-7,
    "prob_neg_3m": 0.04447873135151709,
  },
  "strategy": "max-diversification",
  "volatility": 0.041319221411054166,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.45081612600885007,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.24918387399025882,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-return 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.26530213716726486,
  "sharpe_ratio": 2.4668783994799384,
  "stats": {
    "ci_95_high": 0.46020115973327325,
    "ci_95_low": 0.07040311460125648,
    "prob_neg_1m": 0.2205942366042617,
    "prob_neg_1y": 0.003815164794012449,
    "prob_neg_2y": 0.00008063096217808541,
    "prob_neg_3m": 0.09110132203629034,
  },
  "strategy": "max-return",
  "volatility": 0.09943827681939203,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 1,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-return with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.259685242748487,
  "sharpe_ratio": 2.7944843641708674,
  "stats": {
    "ci_95_high": 0.42779606913574453,
    "ci_95_low": 0.09157441636122943,
    "prob_neg_1m": 0.19105601786145382,
    "prob_neg_1y": 0.00123232947927282,
    "prob_neg_2y": 0.000009277388400952269,
    "prob_neg_3m": 0.06503426088255698,
  },
  "strategy": "max-return",
  "volatility": 0.08577082978941712,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.09999999999999983,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5999999999999999,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.8,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-sharpe 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.12017489274276226,
  "sharpe_ratio": 2.7754540332592463,
  "stats": {
    "ci_95_high": 0.19091747663100866,
    "ci_95_low": 0.04943230885451587,
    "prob_neg_1m": 0.16823441951693324,
    "prob_neg_1y": 0.00043494852393549666,
    "prob_neg_2y": 0.0000012477769895657964,
    "prob_neg_3m": 0.047977523657250276,
  },
  "strategy": "max-sharpe",
  "volatility": 0.03609315504502367,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.33792673907896403,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.3769644238581464,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.2851088370630943,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for max-sharpe with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.17170301532443924,
  "sharpe_ratio": 2.960339253361782,
  "stats": {
    "ci_95_high": 0.27214350021083933,
    "ci_95_low": 0.07126253043803918,
    "prob_neg_1m": 0.16671185331891514,
    "prob_neg_1y": 0.00040320918770953007,
    "prob_neg_2y": 0.0000010778722390747397,
    "prob_neg_3m": 0.04693668341634105,
  },
  "strategy": "max-sharpe",
  "volatility": 0.051245145350204115,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.5549458699014699,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5571591478868352,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.38789498221098556,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for min-risk 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.09819337787526428,
  "sharpe_ratio": 2.6454360776745127,
  "stats": {
    "ci_95_high": 0.15612674543190594,
    "ci_95_low": 0.04026001031862262,
    "prob_neg_1m": 0.1687792176573264,
    "prob_neg_1y": 0.00044680954997311506,
    "prob_neg_2y": 0.0000013143277065030823,
    "prob_neg_3m": 0.04835291434457567,
  },
  "strategy": "min-risk",
  "volatility": 0.029557840590123296,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.4561443140002916,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.36131962493351033,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.1825360610669701,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for min-risk with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.14729006681262857,
  "sharpe_ratio": 2.8709825497283075,
  "stats": {
    "ci_95_high": 0.23419011814744498,
    "ci_95_low": 0.06039001547781217,
    "prob_neg_1m": 0.1687792176573596,
    "prob_neg_1y": 0.0004468095499738922,
    "prob_neg_2y": 0.0000013143277065030823,
    "prob_neg_3m": 0.048352914344598596,
  },
  "strategy": "min-risk",
  "volatility": 0.04433676088511041,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.6842164709997539,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5419794373995795,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.2738040915997649,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for risk-parity 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.05917915388040798,
  "sharpe_ratio": 1.490035320788819,
  "stats": {
    "ci_95_high": 0.11071561112690245,
    "ci_95_low": 0.007642696633913516,
    "prob_neg_1m": 0.25793967689707653,
    "prob_neg_1y": 0.012203440679696032,
    "prob_neg_2y": 0.0007290629961028139,
    "prob_neg_3m": 0.13022445894792511,
  },
  "strategy": "risk-parity",
  "volatility": 0.026294110840048197,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.660289027489285,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.3397109725107151,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for risk-parity with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.11144805816131671,
  "sharpe_ratio": 2.236118171327588,
  "stats": {
    "ci_95_high": 0.19160401605944813,
    "ci_95_low": 0.031292100263185296,
    "prob_neg_1m": 0.21573240398067195,
    "prob_neg_1y": 0.0032135226590336297,
    "prob_neg_2y": 0.00005813158253448192,
    "prob_neg_3m": 0.08650714153281525,
  },
  "strategy": "risk-parity",
  "volatility": 0.040895896886801744,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.8,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.6,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.09999999999990905,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-return 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.10015453923808013,
  "sharpe_ratio": 2.670003817623069,
  "stats": {
    "ci_95_high": 0.15899449140207947,
    "ci_95_low": 0.041314587074080776,
    "prob_neg_1m": 0.16775289939086557,
    "prob_neg_1y": 0.000424689000325551,
    "prob_neg_2y": 0.0000011915518184912877,
    "prob_neg_3m": 0.047647033775754466,
  },
  "strategy": "target-return",
  "volatility": 0.030020383757142527,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.4465722898934456,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.3616572148384307,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.19177049526868561,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-return with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.14729006681262857,
  "sharpe_ratio": 2.8709825497283075,
  "stats": {
    "ci_95_high": 0.23419011814744498,
    "ci_95_low": 0.06039001547781217,
    "prob_neg_1m": 0.1687792176573596,
    "prob_neg_1y": 0.0004468095499738922,
    "prob_neg_2y": 0.0000013143277065030823,
    "prob_neg_3m": 0.048352914344598596,
  },
  "strategy": "target-return",
  "volatility": 0.04433676088511041,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.6842164709997539,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.5419794373995795,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.2738040915997649,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-risk 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.26530213716718815,
  "sharpe_ratio": 2.46687839947988,
  "stats": {
    "ci_95_high": 0.46020115973314013,
    "ci_95_low": 0.07040311460123613,
    "prob_neg_1m": 0.22059423660426164,
    "prob_neg_1y": 0.003815164794012449,
    "prob_neg_2y": 0.00008063096217808541,
    "prob_neg_3m": 0.09110132203629034,
  },
  "strategy": "target-risk",
  "volatility": 0.09943827681936328,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.9999999999997109,
    },
  ],
}
`;

exports[`POST /optimize golden output > matches the recorded response for target-risk with bounds, shorting and leverage 1`] = `
{
  "covariance_matrix": [
    [
      0.0007782507079766273,
      0.000028474953774474508,
      -0.000036491085772483666,
    ],
    [
      0.000028474953774474508,
      0.0029401435573915783,
      -0.000036957020482642463,
    ],
    [
      -0.000036491085772483666,
      -0.000036957020482642463,
      0.009887970896810039,
    ],
  ],
  "expected_return": 0.25968524274850624,
  "sharpe_ratio": 2.794484364171083,
  "stats": {
    "ci_95_high": 0.42779606913576435,
    "ci_95_low": 0.09157441636124813,
    "prob_neg_1m": 0.1910560178614369,
    "prob_neg_1y": 0.001232329479271932,
    "prob_neg_2y": 0.000009277388400952269,
    "prob_neg_3m": 0.06503426088254327,
  },
  "strategy": "target-risk",
  "volatility": 0.0857708297894174,
  "weights": [
    {
      "exp_ret": 0.05353473061419895,
      "fund_id": 0,
      "fund_name": "AAA",
      "volatility": 0.027897145158181102,
      "weight": 0.10000000000035915,
    },
    {
      "exp_ret": 0.07015009992209198,
      "fund_id": 1,
      "fund_name": "BBB",
      "volatility": 0.05422309062928429,
      "weight": 0.6,
    },
    {
      "exp_ret": 0.26530213716726486,
      "fund_id": 2,
      "fund_name": "CCC",
      "volatility": 0.09943827681939203,
      "weight": 0.8,
    },
  ],
}
`;
